# sd-replacement

./: .gitignore  CNAME  Dockerfile  Dockerfile.executor  Pipfile  README.md  client-requirements.txt  convert.py  index.html  main.py  server-requirements.txt  socket-io-client.py  wireshard-dump.txt
.github/workflows/: build_server.yml  dev-deployment.yml  main.yml  web-prod.yml
app/: app.html  config.xml  index.html  manifest.json  sd.webmanifest  settings.html
app/js/: app.js  settings.js
dev/: app.html  cordova_plugins.js  index.html  manifest.json  settings.html
dev/css/: own.css
dev/js/: app.js  index.js  sw.js
node-socket-server/: index.js
node-socket-test/: index.js  package.json  pnpm-lock.yaml
public/app/: index.html
public/app/js/: index.js
rust-client-emitter/: Cargo.toml
rust-client-emitter/src/: main.rs
rust-client-executor/: Cargo.toml  config.yml
rust-client-executor/src/: key_map.rs  main.rs  settings.rs
sd-client/: build.json  config.xml  package-lock.json  package.json  sentry.properties
sd-client/res/: electron.json
sd-client/www/: app.html  index.html  settings.html
sd-replacement-client/: main.py
sd-replacement-server/: config.yaml  main.py  requirements.txt  server.py
sd_replacement_flutter/: Dockerfile  README.md  pubspec.yaml
sd_replacement_flutter/lib/: main-screen.dart  main.dart  setup-screen.dart  storage.dart
sd_replacement_flutter/linux/: CMakeLists.txt  my_application.cc
server/: __init__.py  config.py  db.py  socket_server.py
socket-io-server-test/: index.js  package.json  pnpm-lock.yaml
(+13 files in other folders)
