[package]
name = "rust-client-emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
rust_socketio = "0.3.0"
serde_json = "1.0"
serde_derive = "1.0"
inputbot = {git = "https://github.com/obv-mikhail/InputBot"}
ctrlc = { version = "3.0" }
